--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,19 +21,13 @@ jobs:
           java-version: '17'
 
       - name: Compile project
-        run: |
-          cd TourGuide
-          mvn compile
+        run: mvn clean install
 
       - name: Run unit tests (excluding performance)
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestTourGuideService,TestRewardsService -DexcludeTests=TestPerformance
+        run: mvn test -Dtest=TestTourGuideService,TestRewardsService -DexcludeTests=TestPerformance
 
       - name: Build artifact
-        run: |
-          cd TourGuide
-          mvn package
+        run: mvn package
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -54,9 +48,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run highVolumeTrackLocation with 100 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=100
+        run: mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=100
 
   performance-track-1000:
     name: Performance Test - highVolumeTrackLocation with 1000 users
@@ -70,25 +62,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run highVolumeTrackLocation with 1000 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=1000
+        run:  mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=1000
 
-  performance-track-5000:
-    name: Performance Test - highVolumeTrackLocation with 5000 users
-    runs-on: ubuntu-latest
-    needs: ci-tests
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Run highVolumeTrackLocation with 5000 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=5000
 
   performance-track-10000:
     name: Performance Test - highVolumeTrackLocation with 10000 users
@@ -102,25 +77,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run highVolumeTrackLocation with 10000 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=10000
+        run:  mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=10000
 
-  performance-track-50000:
-    name: Performance Test - highVolumeTrackLocation with 50000 users
-    runs-on: ubuntu-latest
-    needs: ci-tests
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Run highVolumeTrackLocation with 50000 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=50000
 
   performance-track-100000:
     name: Performance Test - highVolumeTrackLocation with 100000 users
@@ -134,9 +92,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run highVolumeTrackLocation with 100000 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=100000
+        run: mvn test -Dtest=TestPerformance#highVolumeTrackLocation -Duser.count=100000
 
   # Performance tests - get rewards
   performance-rewards-100:
@@ -151,9 +107,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run highVolumeGetRewards with 100 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeGetRewards -Duser.count=100
+        run: mvn test -Dtest=TestPerformance#highVolumeGetRewards -Duser.count=100
 
   performance-rewards-1000:
     name: Performance Test - highVolumeGetRewards with 1000 users
@@ -167,9 +121,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run highVolumeGetRewards with 1000 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeGetRewards -Duser.count=1000
+        run:  mvn test -Dtest=TestPerformance#highVolumeGetRewards -Duser.count=1000
 
   performance-rewards-10000:
     name: Performance Test - highVolumeGetRewards with 10000 users
@@ -183,9 +135,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run highVolumeGetRewards with 10000 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeGetRewards -Duser.count=10000
+        run: mvn test -Dtest=TestPerformance#highVolumeGetRewards -Duser.count=10000
 
   performance-rewards-100000:
     name: Performance Test - highVolumeGetRewards with 100000 users
@@ -199,6 +149,4 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run highVolumeGetRewards with 100000 users
-        run: |
-          cd TourGuide
-          mvn test -Dtest=TestPerformance#highVolumeGetRewards -Duser.count=100000
+        run: mvn test -Dtest=TestPerformance#highVolumeGetRewards -Duser.count=100000
